	Skill databases == celest working on them I believe.

	-- New Cards : Not Implemented
	All cards that add CRIT bonus vs. specific race is now applied
	 at 2x rate when installed on a Katar-type weapon.
	 EX) If Goblin Archer card goes on a Katar-type weapon, the CRIT Bonus vs. Undeads become +14.
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: missing getzenybychance??

08/25
	* Updated slots in Sage's diary to 2. [Skotlex]
	* Updated Mobs drops: Dancing Dragon, Civil Servant, Tao Gunka, Kraben by
	  MasterOfMuppets [Lupus]
	* Changed Acid Demonstration from a "weapon" type skill to "misc". [Skotlex]
	* Updated Demonstration to not stack and not be placeable near enemies. [Skotlex]
	* Updated max number of spider webs to 3. [Skotlex]
	* Updated Full Strip's casting time to 0. [Skotlex]
08/24
	* Updated Shield Chain's cool-down to 1 sec. [Skotlex]
	* Updated summon spirit sphere's casting time to 1sec (all over the place
	it says Zen's casting is twice SSS, and everywhere we also read that Zen's
	cast is 2 secs, so add both together...) [Skotlex]
08/23
	* Fixed Sacrificial Ritual requiring Endure LV5 instead of LV1 [Skotlex]
	* Updated the mob skill database. When specifying Metamorphosis/Transformation, 
	  use the skilllv to indicate how many alternatives there are (for example, an
	  ant egg would use metamorphosis level 3 as it can convert to Andre, Deniro or 
	  Pierre) [Skotlex]
	* Set the permilliage (use rate) of Metamorphosis to 50 (0.5%) on all mobs
	  that had it specified at 0.
	* Updated the skill delay from Breaker (thanks to Vicious Pucca) [Skotlex]
	* Lowered Elder Willow's trunk drop rate from 35% to 3.5% [Skotlex]
	* Changed Ghoul's race from 11 (unknown?) to 1 (undead). [Skotlex]
	* Updated Deviling's mode to make him count as a boss/miniboss. [Skotlex]
	* Corrected Spring Rabbit card improving candy-type item healing rates [Skotlex]
	  (should be meat type since that's what it makes mobs drop)